# stac-api-demo

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  lint-check.sh  lint-fix.sh  pyproject.toml
app/: app.py  config.py  error.py  logging.py  main.py
migrations/: migrate.sh
tests/: conftest.py  test_app.py
